syntax  = "proto3";

package assingment4;

option go_package = "proto/pb";

service UserService {
  rpc CreateUser(User) returns (UserResponse);
  rpc GetUser(UserRequest) returns (User);
  rpc ListUsers(EmptyRequest) returns (UserList);
}

message EmptyRequest {}

message User {
    string name = 2;
    string email = 3;
}

message UserList {
    repeated User users = 1;
}

message UserRequest {
    int32 id = 1;
}

message UserResponse {
    int32 userId = 1;
}